{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 484,
  "lineage": "b30409a2-8436-3e28-137e-5dfd86c8e5c2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:security-group/sg-07d5a13b751a09f4f",
            "description": "Security group for RDS instance",
            "filter": null,
            "id": "sg-07d5a13b751a09f4f",
            "name": "dev-app-rds-20251017045722690700000002",
            "tags": {
              "Component": "Database",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-rds-sg",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Database Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:security-group/sg-00fd21243a9e9456b",
            "description": "Security group for monitoring services (Prometheus, Grafana etc.)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fd21243a9e9456b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Node Exporter",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "dev-app-dev-monitoring20251017045256179900000004",
            "name_prefix": "dev-app-dev-monitoring",
            "owner_id": "040108639270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "Monitoring",
              "Name": "dev-app-dev-monitoring-sg"
            },
            "tags_all": {
              "Component": "Monitoring",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-dev-monitoring-sg",
              "Owner": "DevSecOps Team",
              "Project": "dev-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:security-group/sg-06f931218ed480153",
            "description": "Security group for VPC endpoints",
            "egress": [],
            "id": "sg-06f931218ed480153",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DNS from VPC (UDP)",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DNS from VPC",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-app-dev-vpc-endpoints20251017045256077000000003",
            "name_prefix": "dev-app-dev-vpc-endpoints",
            "owner_id": "040108639270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "VPCEndpoints",
              "Name": "dev-app-dev-vpc-endpoints-sg"
            },
            "tags_all": {
              "Component": "VPCEndpoints",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-dev-vpc-endpoints-sg",
              "Owner": "DevSecOps Team",
              "Project": "dev-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05934a8cc96e79d72",
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:instance/i-0fc1337df19caeef5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc1337df19caeef5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0923bf8f2671a1327",
            "private_dns": "ip-10-0-1-25.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.25",
            "public_dns": "ec2-13-125-62-159.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.62.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca5ee107e7615c13",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073cb3ab75ce4a61a",
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-bastion",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-bastion",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03179e1621480b077"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.web",
            "module.ec2.aws_security_group.bastion",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:040108639270:loadbalancer/app/dev-app-alb/04f09bef1f523de2",
            "arn_suffix": "app/dev-app-alb/04f09bef1f523de2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-app-alb-1145561150.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:040108639270:loadbalancer/app/dev-app-alb/04f09bef1f523de2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ee9734a4d5728543"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01dcc350914d93b06"
              },
              {
                "subnet_id": "subnet-073cb3ab75ce4a61a"
              }
            ],
            "subnets": [
              "subnet-01dcc350914d93b06",
              "subnet-073cb3ab75ce4a61a"
            ],
            "tags": {
              "Component": "LoadBalancer",
              "Environment": "dev",
              "Name": "dev-app-alb",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "LoadBalancer",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-alb",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e0f2f664d2c8d921",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:040108639270:listener/app/dev-app-alb/04f09bef1f523de2/8347c00fd28a8b42",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:040108639270:targetgroup/dev-app-web-tg/d42d4b08f441e906",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:040108639270:listener/app/dev-app-alb/04f09bef1f523de2/8347c00fd28a8b42",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:040108639270:loadbalancer/app/dev-app-alb/04f09bef1f523de2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Component": "LoadBalancer",
              "Environment": "dev",
              "Name": "dev-app-alb-listener",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "LoadBalancer",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-alb-listener",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_lb.main",
            "module.ec2.aws_lb_target_group.web",
            "module.ec2.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:040108639270:targetgroup/dev-app-web-tg/d42d4b08f441e906",
            "arn_suffix": "targetgroup/dev-app-web-tg/d42d4b08f441e906",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:040108639270:targetgroup/dev-app-web-tg/d42d4b08f441e906",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-app-web-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:security-group/sg-0ee9734a4d5728543",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee9734a4d5728543",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-app-alb20251017045256579800000006",
            "name_prefix": "dev-app-alb",
            "owner_id": "040108639270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "LoadBalancer",
              "Environment": "dev",
              "Name": "dev-app-alb-sg",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "LoadBalancer",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-alb-sg",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:security-group/sg-03179e1621480b077",
            "description": "Security group for bastion host access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03179e1621480b077",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-app-bastion20251017045256531500000005",
            "name_prefix": "dev-app-bastion",
            "owner_id": "040108639270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "Security",
              "Environment": "dev",
              "Name": "dev-app-bastion-sg",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Security",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-bastion-sg",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:security-group/sg-0e75330e203fb26fe",
            "description": "Security group for web host access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e75330e203fb26fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App traffic from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ee9734a4d5728543"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "dev-app-web20251017054315912500000001",
            "name_prefix": "dev-app-web",
            "owner_id": "040108639270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "Security",
              "Environment": "dev",
              "Name": "dev-app-web-sg",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Security",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-web-sg",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:security-group/sg-07d5a13b751a09f4f",
            "description": "Security group for RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d5a13b751a09f4f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Database access from allowed sources",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03179e1621480b077",
                  "sg-0e75330e203fb26fe"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-app-rds-20251017045722690700000002",
            "name_prefix": "dev-app-rds-",
            "owner_id": "040108639270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "Database",
              "Environment": "dev",
              "Name": "dev-app-rds-sg",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Database Security Group"
            },
            "tags_all": {
              "Component": "Database",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-rds-sg",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Database Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.alb",
            "module.ec2.aws_security_group.bastion",
            "module.ec2.aws_security_group.web",
            "module.vpc.aws_cloudwatch_log_group.vpc_flow_log",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.vpc",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0c4f98546f02f9f",
            "association_id": "eipassoc-07454fe8b4d17c6f1",
            "domain": "vpc",
            "id": "eipalloc-0d0c4f98546f02f9f",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-07e9194dd09b426dd",
            "private_dns": "ip-10-0-1-158.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-3-39-46-166.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.46.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-nat-eip-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-nat-eip-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:internet-gateway/igw-082a641c540fe0502",
            "id": "igw-082a641c540fe0502",
            "owner_id": "040108639270",
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-igw",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0c4f98546f02f9f",
            "association_id": "eipassoc-07454fe8b4d17c6f1",
            "connectivity_type": "public",
            "id": "nat-00d15e67eed97ada7",
            "network_interface_id": "eni-07e9194dd09b426dd",
            "private_ip": "10.0.1.158",
            "public_ip": "3.39.46.166",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-073cb3ab75ce4a61a",
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-nat-gw-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-nat-gw-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:route-table/rtb-091d4c3063bd5fda0",
            "id": "rtb-091d4c3063bd5fda0",
            "owner_id": "040108639270",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-db-rt",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Database"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-db-rt",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:route-table/rtb-00cc244adcf542149",
            "id": "rtb-00cc244adcf542149",
            "owner_id": "040108639270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00d15e67eed97ada7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-private-rt-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Private"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-private-rt-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:route-table/rtb-0b679a2e22f782313",
            "id": "rtb-0b679a2e22f782313",
            "owner_id": "040108639270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00d15e67eed97ada7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-private-rt-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Private"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-private-rt-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:route-table/rtb-0b1bce030161798af",
            "id": "rtb-0b1bce030161798af",
            "owner_id": "040108639270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082a641c540fe0502",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-public-rt",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Public"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-public-rt",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df6d6ae650f2cce8",
            "route_table_id": "rtb-091d4c3063bd5fda0",
            "subnet_id": "subnet-0318804116c77a3fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4cde65dd6392b44",
            "route_table_id": "rtb-091d4c3063bd5fda0",
            "subnet_id": "subnet-004a920e571afbbc5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d05680e6f1d422a",
            "route_table_id": "rtb-00cc244adcf542149",
            "subnet_id": "subnet-0bbaac0d74842b388"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c688180fd362cf7",
            "route_table_id": "rtb-0b679a2e22f782313",
            "subnet_id": "subnet-0bfbf820a974e3e6c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d36732b2396fa31",
            "route_table_id": "rtb-0b1bce030161798af",
            "subnet_id": "subnet-073cb3ab75ce4a61a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cd66141afbc293f",
            "route_table_id": "rtb-0b1bce030161798af",
            "subnet_id": "subnet-01dcc350914d93b06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:subnet/subnet-0318804116c77a3fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0318804116c77a3fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040108639270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-db-subnet-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Data",
              "Type": "Database"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-db-subnet-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Data",
              "Type": "Database"
            },
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:subnet/subnet-004a920e571afbbc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004a920e571afbbc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040108639270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-db-subnet-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Data",
              "Type": "Database"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-db-subnet-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Data",
              "Type": "Database"
            },
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:subnet/subnet-0bbaac0d74842b388",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbaac0d74842b388",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040108639270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-private-subnet-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Application",
              "Type": "Private",
              "kubernetes.io/cluster/dev-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-private-subnet-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Application",
              "Type": "Private",
              "kubernetes.io/cluster/dev-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:subnet/subnet-0bfbf820a974e3e6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfbf820a974e3e6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040108639270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-private-subnet-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Application",
              "Type": "Private",
              "kubernetes.io/cluster/dev-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-private-subnet-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Application",
              "Type": "Private",
              "kubernetes.io/cluster/dev-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:subnet/subnet-073cb3ab75ce4a61a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073cb3ab75ce4a61a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040108639270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-public-subnet-1",
              "Terraform": "true",
              "Tier": "Web",
              "Type": "Public"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-public-subnet-1",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Web",
              "Type": "Public"
            },
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:subnet/subnet-01dcc350914d93b06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dcc350914d93b06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040108639270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-public-subnet-2",
              "Terraform": "true",
              "Tier": "Web",
              "Type": "Public"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-public-subnet-2",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Web",
              "Type": "Public"
            },
            "vpc_id": "vpc-0e0f2f664d2c8d921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:vpc/vpc-0e0f2f664d2c8d921",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6e2fecf2e9f2b9a",
            "default_route_table_id": "rtb-01a2b05994bd5362e",
            "default_security_group_id": "sg-041e4cf1500e913d8",
            "dhcp_options_id": "dopt-00432c238245ee0d9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e0f2f664d2c8d921",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a2b05994bd5362e",
            "owner_id": "040108639270",
            "tags": {
              "Component": "Networking",
              "Environment": "dev",
              "Name": "dev-app-vpc",
              "Terraform": "true",
              "Type": "Main VPC"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-vpc",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Type": "Main VPC"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}